# grit

./: .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  index.html  objects.inv  sitemap.xml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: bench.yml  ci.yml  coverage.yml  pages.yml  release.yml
api/: index.html
api/file-operations/: index.html
api/interval/: index.html
api/interval_set/: index.html
api/io/: index.html
benchmarks/: .gitignore  README.md  bench.sh  focused_bench.sh  generate_all_truth.sh  grit-only.sh  multi_tool_bench.sh
benchmarks/scripts/: bench_all.sh  common.sh  generate_markdown_table.py  install_tools.sh  plot_benchmarks.py  plot_multi_tool.py  python_benchmark.py  rigorous_bench.sh  validate_dataset.sh  verify_all.sh
conda-recipe/: meta.yaml
docs/: ARCHITECTURE.md  COMMANDS.md  PERFORMANCE.md  RELEASE_PROCESS.md  RUST_COOKBOOK.md  STREAMING_MODEL.md  TROUBLESHOOTING.md  TUTORIAL.md  VALIDATION.md  _config.yml  benchmarks.md  index.md  migration.md  multi-tool-benchmarks.md
docs/EXAMPLES/: closest.md  complement.md  coverage.md  generate.md  genomecov.md  intersect.md  jaccard.md  merge.md  multiinter.md  slop.md  sort.md  subtract.md  window.md
docs/commands/: closest.md  complement.md  coverage.md  generate.md  genomecov.md  intersect.md  jaccard.md  merge.md  multiinter.md  slop.md  sort.md  subtract.md  window.md
examples/numpy/: index.html
examples/workflows/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/file-operations/: index.html
guide/in-memory/: index.html
guide/performance/: index.html
homebrew/: grit.rb
packaging/: README.md
packaging/bioconda/: meta.yaml
packaging/homebrew/: grit.rb
py-pygrit/: .gitignore  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
py-pygrit/benchmarks/: bench_performance.py
py-pygrit/docs/: API.md  index.md
py-pygrit/docs/api/: file-operations.md  index.md  interval.md  interval_set.md  io.md
py-pygrit/docs/examples/: numpy.md  workflows.md
py-pygrit/docs/getting-started/: installation.md  quickstart.md
py-pygrit/docs/guide/: file-operations.md  in-memory.md  performance.md
py-pygrit/python/pygrit/: __init__.py  pygrit.pyi
py-pygrit/src/: errors.rs  lib.rs
py-pygrit/tests/: __init__.py  conftest.py  test_integration.py  test_interval.py  test_interval_set.py  test_memory.py  test_new_commands.py  test_streaming.py
py-rbedtools/: Cargo.toml  README.md  pyproject.toml
py-rbedtools/python/rbedtools/: __init__.py
py-rbedtools/src/: lib.rs
scripts/: compare_coverage.py
search/: search_index.json
src/: bed.rs  config.rs  genome.rs  index.rs  interval.rs  lib.rs  main.rs  parallel.rs
src/commands/: closest.rs  complement.rs  coverage.rs  fast_merge.rs  fast_sort.rs  generate.rs  genomecov.rs  intersect.rs  intersect_engine.rs  jaccard.rs  merge.rs  mod.rs  multiinter.rs  slop.rs  sort.rs  streaming_closest.rs  streaming_coverage.rs  streaming_genomecov.rs  streaming_intersect.rs  streaming_merge.rs  streaming_multiinter.rs  streaming_subtract.rs  streaming_window.rs  subtract.rs  window.rs
src/streaming/: active_set.rs  buffers.rs  mod.rs  output.rs  parsing.rs  validation.rs
tests/: closest_streaming_regression.rs  comprehensive_flags.rs  coverage_genome_order.rs  fast_sort_integration.rs  validation_matrix.rs  zero_length_benchmark.rs  zero_length_intervals.rs
tests/fixtures/: edge_cases.bed  nested.bed  subtract_cases.bed  touching.bed  unsorted.bed
tests/fixtures/closest_streaming_bug/: A.bed  A_simple.bed  B.bed  B_simple.bed
tests/fixtures/coverage_bug/: A.bed  A_context.bed  B.bed  B_context.bed  genome_order_A.bed  genome_order_B.bed
tests/validation/: benchmark.sh  download_real_data.sh  generate_data.sh  validate.sh
