[package]
name = "py-pygrit"
version = "0.1.0"
edition = "2021"
authors = ["Manish Kumar Bobbili"]
description = "Python bindings for GRIT - high-performance genomic interval operations"
license = "MIT"

[lib]
name = "pygrit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
rayon = "1.10"

# Link to the main library
grit-genomics = { path = ".." }
