[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pygrit"
version = "0.1.0"
description = "Python bindings for GRIT - high-performance genomic interval operations"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Manish Kumar Bobbili" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
keywords = ["bioinformatics", "genomics", "bedtools", "intervals", "grit", "pygrit"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[project.urls]
Homepage = "https://github.com/manish59/grit"
Repository = "https://github.com/manish59/grit"
Documentation = "https://grit-genomics.readthedocs.io"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pygrit"
