[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rbedtools"
version = "0.1.0"
description = "Fast, parallel genomic interval operations in Rust with Python bindings"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Manish Kumar Bobbili" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["bioinformatics", "genomics", "bedtools", "intervals", "rbedtools"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[project.urls]
Homepage = "https://github.com/manishkumarbobbili/rbedtools"
Repository = "https://github.com/manishkumarbobbili/rbedtools"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rbedtools"
